# elrond-webhooks-sc

./: .gitignore  Cargo.toml  README.md
interaction/: devnet.snippets.sh  testnet.snippets.sh
mandos/: _init.scen.json  deposit.scen.json
meta/: Cargo.toml
meta/src/: main.rs
src/: lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
